static/docs/1.0.0/api/python/_sources/generated/gravitino.filesystem.gvfs_config.GVFSConfig.rst.txt
.. Licensed to the Apache Software Foundation (ASF) under one
   or more contributor license agreements.  See the NOTICE file
   distributed with this work for additional information
   regarding copyright ownership.  The ASF licenses this file
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
   KIND, either express or implied.  See the License for the
   specific language governing permissions and limitations
   under the License.

gravitino.filesystem.gvfs\_config.GVFSConfig
============================================

.. currentmodule:: gravitino.filesystem.gvfs_config

.. autoclass:: GVFSConfig
   :members:                                    
   :show-inheritance:                           
   :inherited-members:                          

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~GVFSConfig.__init__
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~GVFSConfig.AUTH_TYPE
      ~GVFSConfig.CACHE_EXPIRED_TIME
      ~GVFSConfig.CACHE_SIZE
      ~GVFSConfig.DEFAULT_CACHE_EXPIRED_TIME
      ~GVFSConfig.DEFAULT_CACHE_SIZE
      ~GVFSConfig.DEFAULT_CREDENTIAL_EXPIRED_TIME_RATIO
      ~GVFSConfig.GVFS_FILESYSTEM_AZURE_ACCOUNT_KEY
      ~GVFSConfig.GVFS_FILESYSTEM_AZURE_ACCOUNT_NAME
      ~GVFSConfig.GVFS_FILESYSTEM_CLIENT_CONFIG_PREFIX
      ~GVFSConfig.GVFS_FILESYSTEM_CLIENT_REQUEST_HEADER_PREFIX
      ~GVFSConfig.GVFS_FILESYSTEM_CREDENTIAL_EXPIRED_TIME_RATIO
      ~GVFSConfig.GVFS_FILESYSTEM_CURRENT_LOCATION_NAME
      ~GVFSConfig.GVFS_FILESYSTEM_CURRENT_LOCATION_NAME_ENV_VAR
      ~GVFSConfig.GVFS_FILESYSTEM_ENABLE_CREDENTIAL_VENDING
      ~GVFSConfig.GVFS_FILESYSTEM_ENABLE_FILESET_METADATA_CACHE
      ~GVFSConfig.GVFS_FILESYSTEM_GCS_SERVICE_KEY_FILE
      ~GVFSConfig.GVFS_FILESYSTEM_HOOK
      ~GVFSConfig.GVFS_FILESYSTEM_OPERATIONS
      ~GVFSConfig.GVFS_FILESYSTEM_OSS_ACCESS_KEY
      ~GVFSConfig.GVFS_FILESYSTEM_OSS_ENDPOINT
      ~GVFSConfig.GVFS_FILESYSTEM_OSS_SECRET_KEY
      ~GVFSConfig.GVFS_FILESYSTEM_S3_ACCESS_KEY
      ~GVFSConfig.GVFS_FILESYSTEM_S3_ENDPOINT
      ~GVFSConfig.GVFS_FILESYSTEM_S3_SECRET_KEY
      ~GVFSConfig.OAUTH2_AUTH_TYPE
      ~GVFSConfig.OAUTH2_CREDENTIAL
      ~GVFSConfig.OAUTH2_PATH
      ~GVFSConfig.OAUTH2_SCOPE
      ~GVFSConfig.OAUTH2_SERVER_URI
      ~GVFSConfig.SIMPLE_AUTH_TYPE
   
   